fixing z-index issues

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@ layout: default
 .ui-tooltip{
     font-size: .8em;
     font-family: 'Inter UI', sans-serif;
+	z-index: 1;
 }
 .ui-widget.ui-widget-content {
 	border: none;
