Adding http: to Floorspace link
Having problems with SSL on Floorspace

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: default
 		<li><a href="//wosniklaw.com/" target="_blank"><span>Wosnik Law</span></a></li>
 		<li><a href="//getworkweek.com/" target="_blank"><span>Workweek</span></a></li>
 		<li><a href="//ecotherapeutics.com/" target="_blank"><span>Ecotherapeutics</span></a></li>
-		<li><a href="//getfloorspace.com/" target="_blank"><span>Floorspace</span></a></li>
+		<li><a href="http://getfloorspace.com/" target="_blank"><span>Floorspace</span></a></li>
 		<li><a href="//betteressentials.com/" target="_blank"><span>Better Essentials</span></a></li>
 		<li><a href="{{ base.url }}/assets/jen-kane-workbook.pdf" target="_blank"><span>Jen Kane</span></a></li>
 		<li><a href="//debthackr.brettbradleycampbell.com/" target="_blank"><span>DebtHackr</span></a></li>
