Updating bio, removing Better Essentials

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ layout: default
 </div>
 <div class="homepage-section">
 	<h2 class="section-title"><em>bio</em></h2>
-	<p class="bio-text">I'm a web designer and entrepreneur based in Salt Lake City, Utah. I'm best suited to projects that need branding, web design and development, graphic design, and creative marketing campaigns. <br><br>I'm open to freelance contract work and to collaborating on interesting projects. </p>
+	<p class="bio-text">I'm a web designer based in Salt Lake City, Utah. I'm best suited to projects that need branding, graphic design, and web design and development. <br><br>I'm open to freelance contract work and to collaborating on interesting projects. </p>
 </div>
 
 <div class="homepage-section">
@@ -47,7 +47,6 @@ layout: default
 		<li><a href="//getworkweek.com/" target="_blank"><span>Workweek</span></a></li>
 		<li><a href="//ecotherapeutics.com/" target="_blank"><span>Ecotherapeutics</span></a></li>
 		<li><a href="http://getfloorspace.com/" target="_blank"><span>Floorspace</span></a></li>
-		<li><a href="//betteressentials.com/" target="_blank"><span>Better Essentials</span></a></li>
 		<li><a href="{{ base.url }}/assets/jen-kane-workbook.pdf" target="_blank"><span>Jen Kane</span></a></li>
 		<li><a href="//debthackr.brettbradleycampbell.com/" target="_blank"><span>DebtHackr</span></a></li>
 	</ul>
