Adding Website Town, Life Coach Magazine

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,12 +43,13 @@ layout: default
 <div class="homepage-section">
 	<h2 class="section-title"><em>projects</em> <a class="more-info" title="I did the branding, design, and development on each of these projects. ">i</a></h2>
 	<ul class="projects">
+		<li><a href="//websitetown.net" target="_blank"><span>Website Town</span></a></li>
 		<li><a href="//tennisdepartment.com" target="_blank"><span>Tennis Department</span></a></li>
 		<li><a href="http://getfloorspace.com/" target="_blank"><span>Floorspace</span></a></li>
 		<li><a href="//wosniklaw.com/" target="_blank"><span>Wosnik Law</span></a></li>
+		<li><a href="//lifecoachmagazine.com" target="_blank"><span>Life Coach Magazine</span></a></li>
 		<li><a href="//getworkweek.com/" target="_blank"><span>Workweek</span></a></li>
 		<li><a href="//ecotherapeutics.com/" target="_blank"><span>Ecotherapeutics</span></a></li>
-		<li><a href="//debthackr.brettbradleycampbell.com/" target="_blank"><span>DebtHackr</span></a></li>
 	</ul>
 </div>
 
