Adding Better Essentials, rearranging links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,9 +46,10 @@ layout: default
 		<li><a href="//websitetown.net" target="_blank"><span>Website Town</span></a></li>
 		<li><a href="//tennisdepartment.com" target="_blank"><span>Tennis Department</span></a></li>
 		<li><a href="http://getfloorspace.com/" target="_blank"><span>Floorspace</span></a></li>
-		<li><a href="//wosniklaw.com/" target="_blank"><span>Wosnik Law</span></a></li>
 		<li><a href="//lifecoachmagazine.com" target="_blank"><span>Life Coach Magazine</span></a></li>
 		<li><a href="//getworkweek.com/" target="_blank"><span>Workweek</span></a></li>
+		<li><a href="//wosniklaw.com/" target="_blank"><span>Wosnik Law</span></a></li>
+		<li><a href="//betteressentials.com/" target="_blank"><span>Better Essentials</span></a></li>
 		<li><a href="//ecotherapeutics.com/" target="_blank"><span>Ecotherapeutics</span></a></li>
 	</ul>
 </div>
